--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Hi</h1>
     <p>This is where all your code goes. Ignore the other <a href='http://gio1135.xyz'>stuff</a> for now.</p>
     <img src='https://media.giphy.com/media/oBPOP48aQpIxq/giphy.gif'>
-    <body> I got this </body> 
+    <p>I got this</p>
+  </body>
 </html>
