--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>BOB</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <h1>BOB</h1>
     <p>This is where all your code goes. Ignore the other <a href='http://gio1135.xyz'>stuff</a> for now.</p>
-    <img src='https://media.giphy.com/media/oBPOP48aQpIxq/giphy.gif'>
-    <p>I got this</p>
-  </body>
+
+</head>
+ </p> Gio have you ever played the game <a href = http://www.raze4.net/play-raze-5/> Raze </a> it cool. i wonder if you could make somthing like this 
+</p> This is BOB and this is my link to get a GIF.<a href=https://giphy.com/gifs/hoppip-batman-television-hoppip-11mkwYN8k9v5T2>BOB</a> </p> 
+<H1>DIFFRENT GIFs</H1>
+<img src="https://media1.giphy.com/media/BvjC9K9aydiFi/giphy.gif" alt=" thumbs up GIF"/> 
+<img src="https://media2.giphy.com/media/bCvO8biVh8WyI/giphy.gif" alt=" iron man laundry chores ironing GIF"/>
+<img src="https://media2.giphy.com/media/VFB3cJJne7b5m/giphy.gif" alt=" iron man robert downey jr tony stark GIF"/>
 </html>
